Overlapping issue resolved in table css

--- a/lms-ui/src/components/styles/AssignmentTable.css
+++ b/lms-ui/src/components/styles/AssignmentTable.css
@@ -105,6 +105,12 @@
     gap: 20px;
   }
 
+  .grade-status-container{
+    display:flex;
+    flex-direction:column;
+    gap: 10px;
+  }
+
   .popup-content .grade-status-container{
     display: flex;
     flex-direction: column;
@@ -115,8 +121,9 @@
   }
 
   .popup-content .grade-status-container input{
-    margin-left: 10px;
-    margin-right: 10px;
+    /* margin-left: 10px;
+    margin-right: 10px; */
+    padding: 10px;
   }
 
   .submit-button.popup{
@@ -167,9 +174,9 @@
     margin-right: 10px
   }
   .grade-input  {
-    width: 29%;
+    /* width: 29%;
     padding: 8px;
-    margin: 5px 0;
+    margin: 5px 0; */
     border: 1px solid #ccc;
     border-radius: 3px;
     /* margin-top: -2px;
@@ -261,12 +268,15 @@
 
 
 .popup-content .content .submitted_link {
-  background-color: #FEC5BB;
+  background-color: #cff4fc;
+  border: 1px solid #cff4fc;
+  border-radius:6px;
 }
 
 .popup-content .content .submitted_pdf {
-  background-color: #D8E2DC;
-}
+  background-color: #cff4fc;
+  border: 1px solid #cff4fc;
+  border-radius:6px;}
 
 /* .table-submission-data{
   display: flex;
